[package]
name = "blog"
version = "0.1.0"
authors = ["yeyongping <burnedfrog@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0.0", features = ["mysql", "chrono"] }
dotenv = "0.9.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }